{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 344,
  "lineage": "357d971b-4271-8c8a-0f5b-2c258e14def5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bde8f266f3e1cb02",
            "public_dns": "ec2-65-0-9-206.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.9.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhost",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052c08d70def0ac62",
            "arn": "arn:aws:ec2:ap-south-1:291679860522:instance/i-063c9dc4aa211ca59",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c9dc4aa211ca59",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task4",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4b6075d53725fc2",
            "private_dns": "ip-192-168-1-196.ap-south-1.compute.internal",
            "private_ip": "192.168.1.196",
            "public_dns": "ec2-65-0-31-150.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.31.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a4227731a0e5c06b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b641ceaecb080e4",
            "tags": {
              "Name": "mybastionhost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf9b98d9ec6c4488"
            ]
          },
          "dependencies": [
            "aws_security_group.mybastionsecurity",
            "aws_subnet.public",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:291679860522:instance/i-000c495b442361c2b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000c495b442361c2b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task4",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ad2eadd77261e42",
            "private_dns": "ip-192-168-0-61.ap-south-1.compute.internal",
            "private_ip": "192.168.0.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0384bb094b2263087",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003baefa53338df41",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0033110769a72a628",
              "sg-011dec6a614bb23e0"
            ]
          },
          "dependencies": [
            "aws_security_group.mybastionsecurity",
            "aws_security_group.mysqlsecurity",
            "aws_security_group.mysqlserversecurity",
            "aws_security_group.mywebsecurity",
            "aws_subnet.private",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:291679860522:instance/i-04ee4b63fd1edbc1d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ee4b63fd1edbc1d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task4",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d871c43e97943b0",
            "private_dns": "ip-192-168-1-20.ap-south-1.compute.internal",
            "private_ip": "192.168.1.20",
            "public_dns": "ec2-13-127-205-46.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.205.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05fd36c9593d67bc8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b641ceaecb080e4",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e3b48262fb18456f"
            ]
          },
          "dependencies": [
            "aws_security_group.mywebsecurity",
            "aws_subnet.public",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:internet-gateway/igw-05a3a891755ecbacb",
            "id": "igw-05a3a891755ecbacb",
            "owner_id": "291679860522",
            "tags": {
              "Name": "Shreyas_gw"
            },
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "shreyasnatgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bde8f266f3e1cb02",
            "id": "nat-0c772fedb95ff212a",
            "network_interface_id": "eni-04c93ef9194d835f9",
            "private_ip": "192.168.1.86",
            "public_ip": "65.0.9.206",
            "subnet_id": "subnet-01b641ceaecb080e4",
            "tags": {
              "Name": "Shreyas NAT_GW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.mygw",
            "aws_subnet.public",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c99451b655f5c76f",
            "owner_id": "291679860522",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a3a891755ecbacb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Shreyas_routetable"
            },
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02e257293f26dd170",
            "owner_id": "291679860522",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c772fedb95ff212a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Shreyas_routetable_for_natgw"
            },
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.mygw",
            "aws_nat_gateway.shreyasnatgw",
            "aws_subnet.public",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096dc85a963086a09",
            "route_table_id": "rtb-0c99451b655f5c76f",
            "subnet_id": "subnet-01b641ceaecb080e4"
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_route_table.my_route_table1",
            "aws_subnet.public",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060464bef71d4e60f",
            "route_table_id": "rtb-02e257293f26dd170",
            "subnet_id": "subnet-003baefa53338df41"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.mygw",
            "aws_nat_gateway.shreyasnatgw",
            "aws_route_table.my_route_table2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mybastionsecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:security-group/sg-0cf9b98d9ec6c4488",
            "description": "Allow ssh for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf9b98d9ec6c4488",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_bastion_security",
            "name_prefix": null,
            "owner_id": "291679860522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mybastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysqlsecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:security-group/sg-011dec6a614bb23e0",
            "description": "Allow mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011dec6a614bb23e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3b48262fb18456f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my_sql_security",
            "name_prefix": null,
            "owner_id": "291679860522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_security_group.mywebsecurity",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysqlserversecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:security-group/sg-0033110769a72a628",
            "description": "Allow mysql ssh for bastion host only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0033110769a72a628",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cf9b98d9ec6c4488"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_sql_server_security",
            "name_prefix": null,
            "owner_id": "291679860522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysqlserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_security_group.mybastionsecurity",
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mywebsecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:security-group/sg-0e3b48262fb18456f",
            "description": "Allow http,ssh,icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3b48262fb18456f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL ICMP - IPv4",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_web_security",
            "name_prefix": null,
            "owner_id": "291679860522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myweb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:subnet/subnet-003baefa53338df41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-003baefa53338df41",
            "map_public_ip_on_launch": false,
            "owner_id": "291679860522",
            "tags": {
              "Name": "Private_subnet2"
            },
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:subnet/subnet-01b641ceaecb080e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-01b641ceaecb080e4",
            "map_public_ip_on_launch": false,
            "owner_id": "291679860522",
            "tags": {
              "Name": "Public_subnet1"
            },
            "vpc_id": "vpc-0b46c427413481d4c"
          },
          "dependencies": [
            "aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ownvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:291679860522:vpc/vpc-0b46c427413481d4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03b0364192a210884",
            "default_route_table_id": "rtb-0754dbc92ec185252",
            "default_security_group_id": "sg-072c598d404c8a800",
            "dhcp_options_id": "dopt-069d5b6d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b46c427413481d4c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0754dbc92ec185252",
            "owner_id": "291679860522",
            "tags": {
              "Name": "Shreyas_vpc"
            }
          }
        }
      ]
    }
  ]
}